@@ -248,3 +248,6 @@ trade.title=Торговля
 trade.sell=Продать
 trade.buy=Купить
 trade.merchant=Магазин
+
+attack_friendly.title=Подтверждение
+attack_friendly.text=Этот корабль не является враждебным. Вы уверены что хотите его атаковать?
