@@ -92,6 +92,7 @@ public class InitialRadioEmissionQuestGenerator implements WorldGeneratorPart {
                 humanity.getHomeworld().getShips().remove(construction);
                 construction = new NPCShip(0, 1, "icarus_station", humanity, null, "Icarus #1", 25);
                 construction.setWeapons(ResourceManager.getInstance().getWeapons().getEntity("humanity_missiles"));
+                construction.setStationary(true);
                 construction.setAi(null);
                 humanity.getHomeworld().getShips().add(construction);
 
