@@ -14,10 +14,9 @@ import ru.game.aurora.dialog.Dialog;
 import ru.game.aurora.effects.BlasterShotEffect;
 import ru.game.aurora.effects.Effect;
 import ru.game.aurora.gui.GUI;
+import ru.game.aurora.gui.GalaxyMapController;
+import ru.game.aurora.gui.niffy.FriendlyAttackConfirmationController;
 import ru.game.aurora.gui.niffy.InteractionTargetSelectorController;
-import ru.game.aurora.music.Playlist;
-import ru.game.aurora.npc.AlienRace;
-import ru.game.aurora.npc.Faction;
 import ru.game.aurora.player.Player;
 import ru.game.aurora.util.EngineUtils;
 import ru.game.aurora.world.*;
@@ -388,22 +387,32 @@ public class StarSystem extends BaseSpaceRoom implements GalaxyMapObject, ITileM
             }
 
             if (targetsAtSamePosition.size() <= 1) {
-                doFire(world, target, playerShip, weapon, damage);
+                checkIsFriendlyAndFire(world, target, playerShip, weapon, damage);
             } else {
                 InteractionTargetSelectorController.open(new IStateChangeListener<GameObject>() {
                     private static final long serialVersionUID = 1084963569632582987L;
 
                     @Override
                     public void stateChanged(GameObject param) {
-                        doFire(world, param, playerShip, weapon, damage);
+                        checkIsFriendlyAndFire(world, param, playerShip, weapon, damage);
                     }
                 }, targetsAtSamePosition);
             }
         }
     }
 
-    private void doFire(World world, final GameObject targetObject, final Ship playerShip, WeaponInstance weapon, final int damage) {
-        GameLogger.getInstance().logMessage(String.format(Localization.getText("gui", "space.player_attack"), damage, target.getName()));
+    private void checkIsFriendlyAndFire(World world, final GameObject targetObject, final Ship playerShip, WeaponInstance weapon, final int damage) {
+        if (targetObject.getFaction() == null || targetObject.getFaction().isHostileTo(world, world.getPlayer().getShip())) {
+            doFire(world, targetObject, playerShip, weapon, damage);
+            return;
+        }
+        // show confirmation popup
+        FriendlyAttackConfirmationController.open(world, targetObject, weapon, damage);
+    }
+
+
+    public void doFire(World world, final GameObject targetObject, final Ship playerShip, WeaponInstance weapon, final int damage) {
+        GameLogger.getInstance().logMessage(String.format(Localization.getText("gui", "space.player_attack"), damage, targetObject.getName()));
 
         BlasterShotEffect e = new BlasterShotEffect(playerShip, targetObject, world.getCamera(), 800, weapon);
         e.setEndListener(new IStateChangeListener<World>() {
